// 2.55 Change Log
// Updated 13th Mar, 2022

//Since A103

Fix 'combodata->GenFlags[]' sizing
ZC Cheat dialog now checks code on pressing enter
Better handle invalid itemdata pointers in scripts
	( EmilyV, Mar 13th, 2022 )

-Mar 9th Nightly

Fix script-modified temp layers with no associated perm screen not behaving properly.
	(A previous update made them visible, but failed to make them obey solidity and such)
Fix string editor using the wrong margins in the preview window
Add 'bool combodata->TrigFlags[96];' for zscript TriggerFlags access
Add '->Next', '->Prev' trigger flag resolutions
Add the ability to trigger a combo via button press (similar to signposts/chests)
	( EmilyV, Mar 9th, 2022 )

Add read-only 'Screen->ShowingMessage'
Fix combo scripts running during messages with 'Messages Freeze All Action'
	( EmilyV, Mar 8th, 2022 )

Fix typo in player hold sprites, should fix hold sprite issues
	( connorjclark, Mar 2nd, 2022 )

Polish for combo alias and cheat dialogs
	( EmilyV, Feb 26th, 2022 )

Fix music not starting properly in test mode
Fix 'Move' and 'Insert' combos not updating the combos set
	for bottleshops.
Hopefully fix control dialog not drawing button prompt
New feature for corner-select gui objects (e.g. combo solidity):
	'Shift+Click' - Toggle the corner you clicked, and set all 4 corners to that state
	'Ctrl+Click' - Toggle all 4 corners
	( EmilyV, Feb 25th, 2022 )

-Feb 25th nightly

New string editor dialog
Add QR allowing 'Goto' SCCs to work smarter with the 'Is cont. of prev. string' flag
	( EmilyV, Feb 25th, 2022 )

Changed Tall Grass and Shallow Water walking sounds to use proper
	combo collision, new QR for Tall Grass Collision.
	( Deedee, Feb 20th, 2022 )

Changed the max length of 'Strings' from '144' to '8192'.
	Strings no longer start filled with spaces, and unused space does not
	take up quest file size.
	( EmilyV, Feb 19th, 2022 )

Slight GUI tweaks for QR dialog
New QR: 'Block Triggers improved locking'