@@ -3326,6 +3326,27 @@ enum ComboGenFlag
 	GENFLAG_MAX
 };
 
+enum InteractButton
+{
+	INTBTN_A,
+	INTBTN_B,
+	INTBTN_L,
+	INTBTN_R,
+	INTBTN_EX1,
+	INTBTN_EX2,
+	INTBTN_EX3,
+	INTBTN_EX4
+};
+
+DEFINE BIT_INTBTN_A = 1 << INTBTN_A;
+DEFINE BIT_INTBTN_B = 1 << INTBTN_B;
+DEFINE BIT_INTBTN_L = 1 << INTBTN_L;
+DEFINE BIT_INTBTN_R = 1 << INTBTN_R;
+DEFINE BIT_INTBTN_EX1 = 1 << INTBTN_EX1;
+DEFINE BIT_INTBTN_EX2 = 1 << INTBTN_EX2;
+DEFINE BIT_INTBTN_EX3 = 1 << INTBTN_EX3;
+DEFINE BIT_INTBTN_EX4 = 1 << INTBTN_EX4;
+
 enum ComboTrigFlag
 {
 	TRIGFLAG_SWORD,
