@@ -1698,6 +1698,7 @@ string ZScript::VarToString(int32_t ID)
 	case COMBODUSRFLAGS: return "COMBODUSRFLAGS";
 	case COMBODTRIGGERFLAGS: return "COMBODTRIGGERFLAGS";
 	case COMBODTRIGGERFLAGS2: return "COMBODTRIGGERFLAGS2";
+	case COMBODTRIGGERBUTTON: return "COMBODTRIGGERBUTTON";
 	case COMBODTRIGGERLEVEL: return "COMBODTRIGGERLEVEL";
 
 	//comboclass struct
