@@ -1340,8 +1340,9 @@
 #define GAMEMAXCHEAT            1257
 #define SHOWNMSG                1258
 #define COMBODTRIGGERFLAGS2     1259
+#define COMBODTRIGGERBUTTON     1260
 
-#define LAST_BYTECODE           1260
+#define LAST_BYTECODE           1261
 
 //} END OF BYTECODE
 
