@@ -10193,6 +10193,8 @@ static AccessorTable CombosTable[] =
 	{ "setTriggerFlags[]",        ZVARTYPEID_VOID,          SETTER,       COMBODTRIGGERFLAGS,           3,             0,                                    3,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, ZVARTYPEID_UNTYPED, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "getTrigFlags[]",           ZVARTYPEID_BOOL,          GETTER,       COMBODTRIGGERFLAGS2,         96,             0,                                    2,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "setTrigFlags[]",           ZVARTYPEID_VOID,          SETTER,       COMBODTRIGGERFLAGS2,         96,             0,                                    3,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, ZVARTYPEID_BOOL, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
+	{ "getTriggerButton[]",       ZVARTYPEID_BOOL,          GETTER,       COMBODTRIGGERBUTTON,          8,             0,                                    2,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
+	{ "setTriggerButton[]",       ZVARTYPEID_VOID,          SETTER,       COMBODTRIGGERBUTTON,          8,             0,                                    3,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, ZVARTYPEID_BOOL, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "getUserFlags",             ZVARTYPEID_FLOAT,         GETTER,       COMBODUSRFLAGS,               1,             0,                                    1,           { ZVARTYPEID_COMBOS, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "setUserFlags",             ZVARTYPEID_VOID,          SETTER,       COMBODUSRFLAGS,               1,             0,                                    2,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "getFlags[]",               ZVARTYPEID_BOOL,          GETTER,       COMBODUSRFLAGARR,            16,             0,                                    2,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
